# random_lessons

./: README.md  pyproject.toml
Asyncio_lesson/: basic_asyncio.py
pydantic_lesson/: lesson.py  lesson_2.py
